2006-01-31  Davyd Madeley  <davyd@madeley.id.au>

	* configure.in:
	* NEWS: release 2.13.3

2006-01-30  Davyd Madeley  <davyd@madeley.id.au>

	* configure.in: add missing link flags for mixer

	* battstat/battstat_applet.c:
	* gtik/gtik.c:
	* libgswitchit/gswitchit_config.c:
	* libkbdraw/keyboard-drawing.c:
	* mixer/applet.c:
	* modemlights/modem-applet.c: fix compiler warnings

2006-01-30  Davyd Madeley  <davyd@madeley.id.au>

	* Makefile.am: drivemount depends on GNOME-VFS

	* configure.in:
	- bump libnotify version requirement
	- add a --with-gstreamer=xxx flag
	- test for different versions of GStreamer
	- add summary to the end of the configure

	* mixer/applet.c:
	* mixer/applet.h:
	* mixer/dock.h:
	* mixer/load.c:
	* mixer/preferences.c:
	* mixer/preferences.h: support for GStreamer 0.10

2006-01-16  Erdal Ronahi  <erdal.ronahi@gmail.com>

	* configure.in: Added ku (Kurdish) to ALL_LINGUAS

2006-01-16  Davyd Madeley  <davyd@madeley.id.au>

	* configure.in:
	* NEWS: release 2.13.2

2006-01-15  Davyd Madeley  <davyd@madeley.id.au>

	* po/POTFILES.skip: remove gweather/location.c as it no longer exists

2006-01-07  Davyd Madeley  <davyd@madeley.id.au>

	* configure.in: make HAL support optional with a --without-hal flag.
	  Patch from John N. Laliberte <allanonjl@gentoo.org>. Closes #318722.

2006-01-07  Chao-Hsiung Liao  <j_h_liau@yahoo.com.tw>

	* configure.in: Add "zh_HK" to ALL_LIGNUAS.

2006-01-03  Ryan Lortie  <desrt@desrt.ca>

	* configure.in: Bump required versions:
	  - libpanel-applet: 2.13.4 (needed for transparency API)
	  - libnotify: 0.3.0 (totally new API)

2005-12-27  Timur Jamakeev  <timurj@cvs.gnome.org>

	* configure.in: Added "ky" to ALL_LINGUAS

2005-12-13  Davyd Madeley  <davyd@madeley.id.ai>

	* configure.in:
	* NEWS: release 2.13.1
	
	* cpufreq/src/Makefile.am: allow compilation on GLib 2.9/GTK+ 2.8

	* po/POTFILES.in: update for files now in libgweather

2005-12-11  Philip Langdale  <philipl@mail.utexas.edu>
