@@ -164,7 +164,7 @@ AC_SUBST(LIBXKLAVIER_CFLAGS)
 AC_SUBST(LIBXKLAVIER_LIBS)
 
 AC_ARG_ENABLE(flags,
-[  --enable-flags       Enable flags usage in the keyboard indicators],
+[  --enable-flags          Enable flags usage in the keyboard indicators],
 , enable_flags=no)
 AM_CONDITIONAL(ENABLE_FLAGS, test x$enable_flags != xno)
 
@@ -262,7 +262,8 @@ dnl ******************************************
 
 dnl --disable-battstat=(yes|no)
 AC_ARG_ENABLE(battstat,
-	      [  --disable-battstat=[no/yes] don't build battery monitor applet [default=no]],,
+	      [  --disable-battstat=[[no/yes]]
+                          don't build battery monitor applet [[default: no]]],,
 	      disable_battstat=no)
 
 HAVE_LIBAPM=no
@@ -311,6 +312,13 @@ AC_SUBST(ACPIINC)
 AM_CONDITIONAL(HAVE_LIBAPM, test "x$HAVE_LIBAPM" = "xyes")
 AM_CONDITIONAL(NEED_LIBAPM, test "x$NEED_LIBAPM" = "xyes")
 AM_CONDITIONAL(BUILD_BATTSTAT_APPLET, test x$build_battstat_applet = xyes)
+
+dnl *******************************************
+dnl ** Mini-Commander checks                 **
+dnl *******************************************
+AC_ARG_ENABLE(mini-commander, [  --enable-mini-commander build mini-commander
+                          [[default: no, transparent upgrade to deskbar-applet]]], enable_mini_commander="yes", enable_mini_commander="no")
+AM_CONDITIONAL(BUILD_MINICOMMANDER_APPLET, test "x$enable_mini_commander" = "xyes")
 
 dnl *******************************************
 dnl ** mixer applet check                    **
@@ -395,7 +403,7 @@ dnl ***************************************
 
 HAL_CFLAGS=
 HAL_LIBS=
-AC_ARG_WITH(hal,[  --without-hal       build without hal support])
+AC_ARG_WITH(hal,[  --without-hal           build without hal support])
 
 if test "x$with_hal" != xno; then
 
@@ -438,7 +446,7 @@ AC_SUBST(HAVE_XKB)
 
 AM_CONDITIONAL(APPLET_ACCESSX, $HAVE_XKB)
 if test "x$APPLET_ACCESSX" = "xtrue"; then
-  AC_MSG_WARN([*** \`keyboard accessibility status' applet will not be built ***])
+  AC_MSG_WARN([*** keyboard accessibility status applet will not be built ***])
 fi
 CPPFLAGS=$savecppflags
 
@@ -457,7 +465,7 @@ AM_PATH_SYSTEM_TOOLS_BACKENDS($SYSTEM_TOOLS_BACKENDS_REQUIRED, P_MODEMLIGHTS=mod
 AM_CONDITIONAL(APPLET_MODEMLIGHTS, test "x$HAVE_LIBUTIL" = "xtrue" -a "x$P_MODEMLIGHTS" = "xmodemlights")
 
 if test "x$SU_TOOL" == "x" -o "x$HAVE_LIBUTIL" != "xtrue" -o "x$P_MODEMLIGHTS" != "xmodemlights"; then
-  AC_MSG_WARN([*** \`modemlights' applet will not be built ***])
+  AC_MSG_WARN([*** modemlights applet will not be built ***])
 else
   MODEMLIGHTS_LIBS=" -lutil"
   AC_SUBST(MODEMLIGHTS_LIBS)
@@ -471,17 +479,21 @@ dnl ******************************************
 
 dnl --disable-cpufreq=(yes|no)
 AC_ARG_ENABLE(cpufreq,
-	      [  --disable-cpufreq[=no/yes] don't build cpu frequency scaling monitor applet [default=no]],,
+	      [  --disable-cpufreq[[=no/yes]]            
+                          don't build cpu frequency scaling monitor applet
+			  [[default: no]]],,
 	      disable_cpufreq=no)
 
 dnl --enable-frequency-selector=(yes/no)
 AC_ARG_ENABLE(frequency-selector,
-	      [  --enable-frequency-selector[=yes/no] build frequency selector [default yes]], ,
+	      [  --enable-frequency-selector[[=yes/no]]
+	                  build frequency selector [[default: yes]]], ,
 	      enable_selector=yes)
 
 dnl --enable-suid=(yes/no)
 AC_ARG_ENABLE(suid,
-	      [  --enable-suid[=yes/no] suid root the frequency selector executable [default yes]], ,
+	      [  --enable-suid[[=yes/no]]  suid root the frequency selector executable
+	                  [[default: yes]]], ,
 	      suid=yes)
 
 PKG_CHECK_MODULES(CPUFREQ_SELECTOR, glib-2.0 >= $GLIB_REQUIRED gobject-2.0 >= $GLIB_REQUIRED)
@@ -511,7 +523,7 @@ dnl ====================================================================
 dnl Code for checking whether IPv6 is to be enabled on the system.
 dnl ====================================================================
 AC_MSG_CHECKING([whether to enable ipv6])
-AC_ARG_ENABLE(ipv6, [ --enable-ipv6 enable IPv6 extensions], ,enable_ipv6=yes)
+AC_ARG_ENABLE(ipv6, [  --enable-ipv6 enable IPv6 extensions], ,enable_ipv6=yes)
 if test $enable_ipv6 = yes; then
 
   dnl ====================================================================
@@ -664,7 +676,7 @@ gnome-applets-$VERSION configure summary:
 	 - gswitchit			always
 	 - gtik				$build_gnome_vfs_applets
 	 - gweather			$build_gnome_vfs_applets
-	 - mini-commander		always
+	 - mini-commander		$enable_mini_commander
 	 - mixer			$HAVE_GST
 	 - modemlights
 	 - multiload			$build_gtop_applets
