@@ -1,3 +1,11 @@
+2006-02-11  Davyd Madeley  <davyd@madeley.id.au>
+
+	* configure.in:
+	* mini-commander/Makefile.am:
+	* mini-commander/GNOME_MiniCommanderApplet.server.in:
+	- make mini-commander run deskbar-applet's factory by default
+	- clean up some things in configure.in
+
 2006-01-31  Davyd Madeley  <davyd@madeley.id.au>
 
 	* configure.in:
